--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ body:hover .cursor-wrap {
   <div id="sketchable" data-w-id="c025ab1d-a52d-b42c-6ccf-aef5777ba840" class="sketchable"></div>
   <header class="hero-section wf-section">
     <nav data-w-id="14e026d6-4b3e-94fd-6b2f-1eafbd34420a" style="opacity:0" class="section-bottom-wrapper">
-      <a href="http://yooo.com" class="hero-link">ETH Address</a>
-      <a href="http://yoo.com" class="hero-link">Twitter</a>
-      <a href="#yooooooo.com" class="hero-link">TELEGRAM</a>
+      <a href="#" class="hero-link">ETH Address</a>
+      <a href="https://twitter.com/tozeroeth" class="hero-link">Twitter</a>
+      <a href="#" class="hero-link">TELEGRAM</a>
     </nav>
   </header>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=647e0ec177c28e1e0a5927bb" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
