--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body:hover .cursor-wrap {
   <header class="hero-section wf-section">
     <nav data-w-id="14e026d6-4b3e-94fd-6b2f-1eafbd34420a" style="opacity:0" class="section-bottom-wrapper">
       <a href="#" class="hero-link">ETH Address</a>
-      <a href="https://twitter.com/tozeroeth" class="hero-link">Twitter</a>
+      <a href="https://twitter.com/tozerocoineth" class="hero-link">Twitter</a>
       <a href="https://t.me/tozeroeth" class="hero-link">TELEGRAM</a>
     </nav>
   </header>
